src/objects/Implant_Rescue_Service__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implant Rescue Services</relationshipLabel>
        <relationshipName>Implant_Rescue_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <formula>Account__r.Movex__c</formula>
        <label>ERP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRS_city__c</fullName>
        <label>IRS_city</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRS_full_adress__c</fullName>
        <formula>Account__r.Name &amp;&quot;, &quot;&amp; IRS_street__c &amp;&quot;, &quot;&amp; IRS_zip__c &amp; &quot;, &quot;&amp; IRS_city__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IRS_full_adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRS_street__c</fullName>
        <label>IRS_street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRS_zip__c</fullName>
        <label>IRS_zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_System__c</fullName>
        <label>implant system</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ankylos</fullName>
                </value>
                <value>
                    <fullName>ATIS</fullName>
                </value>
                <value>
                    <fullName>ATIS EV</fullName>
                </value>
                <value>
                    <fullName>ATIS TX</fullName>
                </value>
                <value>
                    <fullName>competitor (provided with Atlantis)</fullName>
                </value>
                <value>
                    <fullName>Frialit</fullName>
                </value>
                <value>
                    <fullName>IMZ</fullName>
                </value>
                <value>
                    <fullName>XiVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_safed__c</fullName>
        <label>Implant safed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>no information received</fullName>
                    <default>true</default>
                    <label>no information received</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>case_confirmed__c</fullName>
        <label>case confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>case_confirmed_date__c</fullName>
        <label>case confirmed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>case_confirmed_to__c</fullName>
        <label>case confirmed to</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_person__c</fullName>
        <label>contact person</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_email__c</fullName>
        <formula>Account__r.General_Info_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>customer_email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_pays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>customer pays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>customer_phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>customer_phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoice_date__c</fullName>
        <label>invoice date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>order_no__c</fullName>
        <label>order no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>patient_name__c</fullName>
        <label>patient_name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reports_sent_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>reports sent in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rescue_date_end__c</fullName>
        <label>rescue_date_end</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rescue_date_start__c</fullName>
        <label>rescue_date_start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rescue_date_status__c</fullName>
        <label>rescue_date_status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>first possible date</fullName>
                </value>
                <value>
                    <fullName>planned in advance</fullName>
                </value>
                <value>
                    <fullName>conditionally</fullName>
                </value>
                <value>
                    <fullName>follow-up</fullName>
                </value>
                <value>
                    <fullName>fixed</fullName>
                </value>
                <value>
                    <fullName>no customer reply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rescue_dentist__c</fullName>
        <label>rescue dentist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abert, Christian</fullName>
                </value>
                <value>
                    <fullName>Ajam, Farid</fullName>
                </value>
                <value>
                    <fullName>Bauer, Thomas</fullName>
                </value>
                <value>
                    <fullName>Büchter, Andre</fullName>
                </value>
                <value>
                    <fullName>Buhtz, Christian</fullName>
                </value>
                <value>
                    <fullName>Czichowsky, Chris</fullName>
                </value>
                <value>
                    <fullName>Drews, Dirk Joachim</fullName>
                </value>
                <value>
                    <fullName>Ender, Marcel</fullName>
                </value>
                <value>
                    <fullName>Engelke &amp; Büchter</fullName>
                </value>
                <value>
                    <fullName>Fischer-Barber, Andrea</fullName>
                </value>
                <value>
                    <fullName>Fröhlich, Michael</fullName>
                </value>
                <value>
                    <fullName>Gerlach, Till</fullName>
                </value>
                <value>
                    <fullName>Gura, Michael</fullName>
                </value>
                <value>
                    <fullName>Heering, Dirk</fullName>
                </value>
                <value>
                    <fullName>Hundeshagen, Benjamin</fullName>
                </value>
                <value>
                    <fullName>IRS Doctor</fullName>
                    <isActive>false</isActive>
                    <label>IRS Doctor</label>
                </value>
                <value>
                    <fullName>Kestel, Martin</fullName>
                </value>
                <value>
                    <fullName>Kornmann, Frank</fullName>
                </value>
                <value>
                    <fullName>Kornmann &amp; Gerlach</fullName>
                </value>
                <value>
                    <fullName>Korves, Gerhard</fullName>
                </value>
                <value>
                    <fullName>Krinner, Maximilian</fullName>
                </value>
                <value>
                    <fullName>Krug, Florian</fullName>
                </value>
                <value>
                    <fullName>Lodde, Gerrit</fullName>
                </value>
                <value>
                    <fullName>Loeck, Michael</fullName>
                </value>
                <value>
                    <fullName>Rahlf, Björn</fullName>
                </value>
                <value>
                    <fullName>Rauch, Petra</fullName>
                </value>
                <value>
                    <fullName>Sausmikat, Wolfgang</fullName>
                </value>
                <value>
                    <fullName>Schaaf-Zielinska, Agnieszka</fullName>
                </value>
                <value>
                    <fullName>Schmitz, Jens</fullName>
                </value>
                <value>
                    <fullName>Schneider, Matthias</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rescue_method__c</fullName>
        <label>rescue method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>centre</fullName>
                </value>
                <value>
                    <fullName>mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rescue_partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>rescue partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.User_Type__c</field>
                <operation>equals</operation>
                <value>Implant Rescue Dentist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Implant_Rescue_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rescue_reason__c</fullName>
        <label>rescue reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>abutment broken</fullName>
                </value>
                <value>
                    <fullName>conus broken</fullName>
                </value>
                <value>
                    <fullName>implant broken</fullName>
                </value>
                <value>
                    <fullName>screw broken</fullName>
                </value>
                <value>
                    <fullName>tightened abutment</fullName>
                </value>
                <value>
                    <fullName>tightened screw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rescue_status__c</fullName>
        <label>rescue status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>open</fullName>
                    <default>true</default>
                    <label>open</label>
                </value>
                <value>
                    <fullName>internal check</fullName>
                </value>
                <value>
                    <fullName>feedback customer</fullName>
                </value>
                <value>
                    <fullName>closed</fullName>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                </value>
                <value>
                    <fullName>rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sent_complaint_formular__c</fullName>
        <label>sent complaint formular</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sent_consent_form__c</fullName>
        <label>sent consent form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sent_in_by_sales_rep__c</fullName>
        <formula>sent_in_by_user__c  &lt;&gt; &quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sent in by sales rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sent_in_by_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>sent in by user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implant_Rescue_Services1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sent_rescue_kit__c</fullName>
        <label>sent rescue kit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>visiting_adress_city__c</fullName>
        <formula>Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>visiting_adress_city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>visiting_adress_zip__c</fullName>
        <formula>Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>visiting_adress_zip</label>
        <type>Text</type>
    </fields>
    <label>Implant Rescue Service</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>IRS-Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implant Rescue Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>date_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(rescue_date_start__c),ISBLANK(rescue_date_end__c), ISPICKVAL(rescue_date_status__c, &quot;fixed&quot;))</errorConditionFormula>
        <errorMessage>you&apos;re not able to safe a fixed rescue meeting without entering a start- / enddate</errorMessage>
    </validationRules>
</CustomObject>